src/z80asm/z80asm2/t/40-syntax/expected/byte_01.txt
% z88dk-z80asm -v -dump-after-parse t/40-syntax//input/byte_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/40-syntax/input/byte_01.asm...
t/40-syntax/input/byte_01.asm:1:1: error: Unterminated expression after "byte"
    byte
    ^
t/40-syntax/input/byte_01.asm:2:1: error: Unterminated expression after "byte"
    byte ,
    ^
t/40-syntax/input/byte_01.asm:4:17: error: Unterminated expression after ","
    byte 1,2,3,1+2*3,
                    ^
t/40-syntax/input/byte_01.asm:5:18: error: Unexpected token: "@"
    byte 1,2,3,1+2*3 @
                     ^
Program
    OpcodeStmt
        Location: t/40-syntax/input/byte_01.asm:3:1
        Address: 0
        Bytes: 0 0 0 0
        Patches:
            Patch
                Offset: 0, Size: 1
                Type: Unsigned
                Validation: Any
                Formula: None
                Inner expression:
                    ExprLiteralInt: 1
            Patch
                Offset: 1, Size: 1
                Type: Unsigned
                Validation: Any
                Formula: None
                Inner expression:
                    ExprLiteralInt: 2
            Patch
                Offset: 2, Size: 1
                Type: Unsigned
                Validation: Any
                Formula: None
                Inner expression:
                    ExprLiteralInt: 3
            Patch
                Offset: 3, Size: 1
                Type: Unsigned
                Validation: Any
                Formula: None
                Inner expression:
                    ExprBinary: +
                        LHS:
                            ExprLiteralInt: 1
                        RHS:
                            ExprBinary: *
                                LHS:
                                    ExprLiteralInt: 2
                                RHS:
                                    ExprLiteralInt: 3
    OpcodeStmt
        Location: t/40-syntax/input/byte_01.asm:6:1
        Address: 0
        Bytes: $68 $65 $6C $6C $6F $20 $77 $6F $72 $6C $64 $21 $0A
